# netology_pytorch_project

./: .gitignore  README.md  main.py  pyproject.toml
hw/: HW_01_Boston.ipynb  HW_02_MNIST.ipynb
notebooks/: 1.2.0_autograd.ipynb  1.2_autograd.ipynb  1.3.0_linear_regression.ipynb  1.3_linear_regression.ipynb  2.1_multilayer_perceptron.ipynb  nomebook.ipynb
